--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -154,7 +154,7 @@
     <string name="settings_hosts_title">Hosts systemless</string>
     <string name="settings_hosts_summary">Support hosts systemless pour les applications type Adblock</string>
 
-    <string name="settings_su_app_adb">Applis & ADB</string>
+    <string name="settings_su_app_adb">Applis et ADB</string>
     <string name="settings_su_app">Applications uniquement</string>
     <string name="settings_su_adb">ADB uniquement</string>
     <string name="settings_su_disable">Désactivé</string>
