--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -122,6 +122,10 @@
     <string name="su_db_corrupt">La base de datos SU está dañada, se creará nueva base de datos</string>
     <string name="cannot_check_sn_title">No es posible verificar SafetyNet!</string>
     <string name="cannot_check_sn_notice">Debido a algunos cambios en los Servicios de Google Play, no es posible verificar SafetyNet en la versión reempaquetada de Magisk Manager</string>
+    <string name="setup_done">Instalación Realizada</string>
+    <string name="setup_fail">Instalación Fallida</string>
+    <string name="env_fix_title">Se Requiere una Instalación Adicional</string>
+    <string name="env_fix_msg">Su dispositivo requiere una instalación adicional para que Magisk funcione correctamente. Se descargará el zip de instalación de Magisk, desea continuar ahora?</string>
  
     
     <!--Settings Activity -->
