--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -1,6 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <!--Not translatable-->
+    <string name="app_name" translatable="false">Gestionnaire Magisk</string>
+    <string name="magisk" translatable="false">Magisk</string>
+    <string name="magiskhide" translatable="false">Masque Magisk</string>
+    
+    <!--Used in both stub and full app-->
     <string name="download_file_error">Erreur de téléchargement du fichier</string>
-    <string name="downloading_toast">Téléchargement %1$s</string>
+    <string name="downloading_toast">Téléchargement à %1$s</string>
     <string name="no_rw_storage">Cette fonctionnalité ne marchera pas sans la permission d\'écriture sur le stockage externe.</string>
     <string name="no_thanks">Non merci</string>
     <string name="yes">Oui</string>
