--- a/src/full/res/values-es/strings.xml
+++ b/src/full/res/values-es/strings.xml
@@ -121,7 +121,7 @@
     <string name="env_fix_title">Se Requiere una Instalación Adicional</string>
     <string name="env_fix_msg">Su dispositivo requiere una instalación adicional para que Magisk funcione correctamente. Se descargará el zip de instalación de Magisk, desea continuar ahora?</string>
     <string name="setup_title">Configuración Adicional</string>
-    <string name="setup_msg">Ejecutando Configuracion de Entorno</string>
+    <string name="setup_msg">Ejecutando Configuración de Entorno</string>
     
     <!--Settings Activity -->
     <string name="settings_general_category">General</string>
