--- a/src/full/res/values-zh-rCN/strings.xml
+++ b/src/full/res/values-zh-rCN/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <!--Universal-->
 
     <!--Welcome Activity-->
     <string name="modules">模块</string>
@@ -23,7 +22,7 @@
     <string name="safetyNet_res_invalid">回传值无效</string>
 
     <!--Install Fragment-->
-    <string name="advanced_settings_title">高级设置</string>
+    <string name="advanced_settings_title">安装选项</string>
     <string name="keep_force_encryption">保持强制加密</string>
     <string name="keep_dm_verity">保留 AVB 2.0/dm-verity</string>
     <string name="current_magisk_title">已安装版本：%1$s</string>
@@ -107,6 +106,8 @@
     <string name="boot_file_patch_msg">选择原厂 Boot 镜像备份；支持 .img 以及 .img.tar 格式</string>
     <string name="complete_uninstall">完全卸载</string>
     <string name="restore_img">还原原厂镜像</string>
+    <string name="restore_img_title">还原镜像</string>
+    <string name="restore_img_msg">还原中…</string>
     <string name="restore_done">还原完成！</string>
     <string name="restore_fail">原厂 Boot 镜像备份不存在！</string>
     <string name="proprietary_title">下载专有代码</string>
@@ -118,6 +119,8 @@
     <string name="setup_fail">安装失败</string>
     <string name="env_fix_title">需要额外安装</string>
     <string name="env_fix_msg">您的设备需要额外的安装才能使 Magisk 正常工作。 将下载 Magisk 安装包，是否继续？</string>
+    <string name="setup_title">额外安装</string>
+    <string name="setup_msg">运行环境安装中…</string>
 
     <!--Settings Activity -->
     <string name="settings_general_category">常规</string>
