--- a/src/full/res/values-ru/strings.xml
+++ b/src/full/res/values-ru/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <!--Universal-->
 
     <!--Welcome Activity-->
     <string name="modules">Модули</string>
@@ -41,7 +40,7 @@
     <string name="remove_file_deleted">Модуль не будет удален после перезагрузки</string>
     <string name="disable_file_created">Модуль будет отключен после перезагрузки</string>
     <string name="disable_file_removed">Модуль будет активирован после перезагрузки</string>
-    <string name="author">Разработчик: %1$s</string>
+    <string name="author">Автор: %1$s</string>
     <string name="reboot_recovery">Перезагрузка в Recovery</string>
     <string name="reboot_bootloader">Перезагрузка в Bootloader</string>
     <string name="reboot_download">Перезагрузка в Download</string>
@@ -107,11 +106,21 @@
     <string name="boot_file_patch_msg">Выберите файл ядра (boot), *.img либо *.img.tar формата</string>
     <string name="complete_uninstall">Полное удаление</string>
     <string name="restore_img">Восстановить разделы</string>
+    <string name="restore_img_title">Восстановление разделов</string>
+    <string name="restore_img_msg">Восстановление…</string>
     <string name="restore_done">Восстановление завершено!</string>
     <string name="restore_fail">Резервная копия отсутствует!</string>
     <string name="proprietary_title">Загрузка SafetyNet</string>
-    <string name="proprietary_notice">Magisk Manager — свободно распространяемый продукт, он не содержит собственный код SafetyNet API от Google.\n\nРазрешить Magisk Manager загрузить расширение (содержит GoogleApiClient) для проверки SafetyNet?</string>
+    <string name="proprietary_notice">Magisk Manager — свободно распространяемый продукт, он не содержит собственный код SafetyNet API от Google.\n\nРазрешить Magisk Manager загрузить расширение для проверки SafetyNet? (содержит GoogleApiClient)</string>
     <string name="su_db_corrupt">База данных SU повреждена, будет создана новая</string>
+    <string name="cannot_check_sn_title">Невозможно проверить SafetyNet</string>
+    <string name="cannot_check_sn_notice">В связи с изменениями в сервисах Google Play, невозможно выполнить проверку статуса SafetyNet с пересобранным Magisk Manager</string>
+    <string name="setup_done">Установка завершена</string>
+    <string name="setup_fail">Ошибка установки</string>
+    <string name="env_fix_title">Требуется дополнительная установка</string>
+    <string name="env_fix_msg">Вашему устройству требуется дополнительная установка Magisk для корректной работы. Будет загружен установочный ZIP Magisk, продолжить?</string>
+    <string name="setup_title">Дополнительная установка</string>
+    <string name="setup_msg">Настройка рабочей среды…</string>
 
     <!--Settings Activity -->
     <string name="settings_general_category">Основные</string>
@@ -204,7 +213,7 @@
     <string name="su_revoke_title">Сброс настроек</string>
     <string name="su_revoke_msg">Сбросить настройки для %1$s?</string>
     <string name="toast">Всплывающее уведомление</string>
-    <string name="none">Ничего</string>
+    <string name="none">Нет</string>
     <string name="auth_fail">Ошибка аутентификации</string>
 
     <!--Superuser logs-->
