--- a/src/full/res/values-ru/strings.xml
+++ b/src/full/res/values-ru/strings.xml
@@ -133,7 +133,6 @@
     <string name="settings_restore_manager_title">Восстановление Magisk Manager</string>
     <string name="settings_restore_manager_summary">Восстановить Magisk Manager с оригинальным именем пакета</string>
     <string name="language">Язык</string>
-    <string name="system_default">По умолчанию (Системный)</string>
     <string name="settings_update">Настройки обновления</string>
     <string name="settings_check_update_title">Проверка обновлений</string>
     <string name="settings_check_update_summary">Периодически проверять обновления в фоне</string>
@@ -185,7 +184,7 @@
     <string name="requester_summary">Сессии Суперпользователя наследуют именное пространство запрашивающего</string>
     <string name="isolate_summary">Сессии Суперпользователя будут иметь изолированные именные пространства</string>
     <string name="android_o_not_support">Не поддерживается в Android 8.0+</string>
-    <string name="disable_fingerprint">Не поддерживается устройством или не заданы опечатки</string>
+    <string name="disable_fingerprint">Не поддерживается устройством или не заданы отпечатки</string>
 
     <!--Superuser-->
     <string name="su_request_title">Запрос прав Суперпользователя</string>
