--- a/src/full/res/values-ru/strings.xml
+++ b/src/full/res/values-ru/strings.xml
@@ -103,7 +103,7 @@
     <string name="install_second_slot">Установка во Второй Слот (После OTA)</string>
     <string name="select_method">Выбор способа</string>
     <string name="no_boot_file_patch_support">Целевая версия Magisk не поддерживает патчинг boot-образов</string>
-    <string name="boot_file_patch_msg">Выберите файл ядра (boot), *.img либо *.img.tar формата</string>
+    <string name="boot_file_patch_msg">Выберите файл ядра (boot) - *.img или *.img.tar</string>
     <string name="complete_uninstall">Полное удаление</string>
     <string name="restore_img">Восстановить разделы</string>
     <string name="restore_img_title">Восстановление разделов</string>
@@ -131,9 +131,9 @@
     <string name="settings_hide_manager_title">Скрытие Magisk Manager</string>
     <string name="settings_hide_manager_summary">Пересобрать Magisk Manager со случайным именем пакета</string>
     <string name="settings_restore_manager_title">Восстановление Magisk Manager</string>
-    <string name="settings_restore_manager_summary">Восстановить Magisk Manager с оригинальным именем пакета</string>
+    <string name="settings_restore_manager_summary">Восстановить Magisk Manager с исходным именем пакета</string>
     <string name="language">Язык</string>
-    <string name="settings_update">Настройки обновления</string>
+    <string name="settings_update">Настройки обновлений</string>
     <string name="settings_check_update_title">Проверка обновлений</string>
     <string name="settings_check_update_summary">Периодически проверять обновления в фоне</string>
     <string name="settings_update_channel_title">Источник обновлений</string>
@@ -160,7 +160,7 @@
     <string name="superuser_access">Уровень доступа</string>
     <string name="auto_response">Автоматический ответ</string>
     <string name="request_timeout">Ожидание ответа</string>
-    <string name="superuser_notification">Уведомление Суперпользователя</string>
+    <string name="superuser_notification">Уведомления Суперпользователя</string>
     <string name="request_timeout_summary">%1$s секунд</string>
     <string name="settings_su_reauth_title">Повторная аутентификация</string>
     <string name="settings_su_reauth_summary">Повторный запрос прав Суперпользователя после обновления приложений</string>
@@ -172,9 +172,9 @@
     <string name="settings_owner_manage">Регулировка владельцем</string>
     <string name="settings_user_independent">Правила пользователей</string>
     <string name="owner_only_summary">Только владелец имеет Root-доступ</string>
-    <string name="owner_manage_summary">Только владелец может управлять Root-доступом и обрабатывать запросы</string>
+    <string name="owner_manage_summary">Только владелец управляет Root-доступом и обрабатывает запросы</string>
     <string name="user_indepenent_summary">Каждый пользователь имеет свои собственные правила Root-доступа</string>
-    <string name="multiuser_hint_owner_request">Запрос отправлен владельцу устройства. Переключитесь на профиль владельца для обработки запроса</string>
+    <string name="multiuser_hint_owner_request">Запрос отправлен владельцу устройства. Переключитесь в профиль владельца для обработки запроса</string>
 
     <string name="mount_namespace_mode">Настройка именных пространств</string>
     <string name="settings_ns_global">Общее именное пространство</string>
@@ -182,7 +182,7 @@
     <string name="settings_ns_isolate">Изолированное именное пространство</string>
     <string name="global_summary">Сессии Суперпользователя используют общее именное пространство</string>
     <string name="requester_summary">Сессии Суперпользователя наследуют именное пространство запрашивающего</string>
-    <string name="isolate_summary">Сессии Суперпользователя будут иметь изолированные именные пространства</string>
+    <string name="isolate_summary">Сессии Суперпользователя используют изолированные именные пространства</string>
     <string name="android_o_not_support">Не поддерживается в Android 8.0+</string>
     <string name="disable_fingerprint">Не поддерживается устройством или не заданы отпечатки</string>
 
@@ -211,7 +211,7 @@
     <string name="su_snack_revoke">Настройки для %1$s сброшены</string>
     <string name="su_revoke_title">Сброс настроек</string>
     <string name="su_revoke_msg">Сбросить настройки для %1$s?</string>
-    <string name="toast">Всплывающее уведомление</string>
+    <string name="toast">Всплывающие уведомления</string>
     <string name="none">Нет</string>
     <string name="auth_fail">Ошибка аутентификации</string>
 
