--- a/src/full/res/values-fr/strings.xml
+++ b/src/full/res/values-fr/strings.xml
@@ -106,6 +106,8 @@
     <string name="boot_file_patch_msg">Sélectionnez l\'image par défaut de démarrage stockée au format .img ou .img.tar</string>
     <string name="complete_uninstall">Désinstallation terminée</string>
     <string name="restore_img">Restauration des images</string>
+    <string name="restore_img_title">Restauration d\'images</string>
+    <string name="restore_img_msg">Restauration…</string>
     <string name="restore_done">Restauration terminée!</string>
     <string name="restore_fail">Le sauvegarde par défaut n\'existe pas!</string>
     <string name="proprietary_title">Télécharger Code Propriétaire</string>
@@ -117,6 +119,8 @@
     <string name="setup_fail">Échec de l\'installation</string>
     <string name="env_fix_title">Installation additionnelle requise</string>
     <string name="env_fix_msg">Votre appareil a besoin d\'une configuration supplémentaire pour que Magisk fonctionne correctement. Il téléchargera le zip d\'installation de Magisk, voulez-vous procéder maintenant ?</string>
+    <string name="setup_title">Installation Additionnel</string>
+    <string name="setup_msg">Démarrer l\'installation de l\'environnement…</string>
  
     <!--Settings Activity -->
     <string name="settings_general_category">Général</string>
