--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <!--Not translatable-->
+    <string name="app_name" translatable="false">Magisk Manager</string>
+    <string name="magisk" translatable="false">Magisk</string>
+    <string name="magiskhide" translatable="false">Magisk Hide</string>
+    
     <!--Used in both stub and full app-->
     <string name="download_file_error">Erreur de téléchargement du fichier</string>
     <string name="downloading_toast">Téléchargement à %1$s</string>
