Little adjustment for French translation :)

--- a/src/full/res/values-fr/strings.xml
+++ b/src/full/res/values-fr/strings.xml
@@ -64,7 +64,7 @@
     <!--About Activity-->
     <string name="about">À propos</string>
     <string name="app_changelog">Journal</string>
-    <string name="translators">xerta555</string>
+    <string name="translators">Rom</string>
     <string name="app_version">Version</string>
     <string name="app_source_code">Code source</string>
     <string name="donation">Dons</string>
